--- a/service/fancypenosi/web/page.html
+++ b/service/fancypenosi/web/page.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <!-- <script src="/htmx.min.js"></script> -->
-    <!-- <link rel="stylesheet" href="/style.css" type="text/css" /> -->
+    <link rel="stylesheet" href="/public/style.css" type="text/css" />
     <meta charset="UTF-8" />
     <title>fancypenosi</title>
   </head>
