--- a/service/fancypenosi/web/public/bg/cube.html
+++ b/service/fancypenosi/web/public/bg/cube.html
@@ -34,11 +34,10 @@
   <script type="importmap">
     {
       "imports": {
-        "three": "https://unpkg.com/three@0.155.0/build/three.module.min.js",
-        "three/": "https://unpkg.com/three@0.155.0/"
+        "three": "/public/pkg/three.module.min.js"
       }
     }
   </script>
 
-  <script type="module" src="/script/bg-suzanne.js"></script>
+  <script type="module" src="/public/script/sign-up-bg.js"></script>
 </html>
