--- a/service/fancypenosi/web/public/bg/suzanne.html
+++ b/service/fancypenosi/web/public/bg/suzanne.html
@@ -34,10 +34,11 @@
   <script type="importmap">
     {
       "imports": {
-        "three": "/pkg/three.module.min.js"
+        "three": "https://unpkg.com/three@0.155.0/build/three.module.min.js",
+        "three/": "https://unpkg.com/three@0.155.0/"
       }
     }
   </script>
 
-  <script type="module" src="/script/sign-up-bg.js"></script>
+  <script type="module" src="/public/script/bg-suzanne.js"></script>
 </html>
