--- a/service/fancypenosi/web/public/bg/cube.html
+++ b/service/fancypenosi/web/public/bg/cube.html
@@ -39,5 +39,5 @@
     }
   </script>
 
-  <script type="module" src="/public/script/sign-up-bg.js"></script>
+  <script type="module" src="/public/bg/cube.js"></script>
 </html>
