--- a/service/fancypenosi/web/public/bg/suzanne.html
+++ b/service/fancypenosi/web/public/bg/suzanne.html
@@ -25,6 +25,7 @@
     <canvas id="c"></canvas>
   </body>
 
+  <!-- todo: may not be needed -->
   <script
     async
     src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"
@@ -40,5 +41,5 @@
     }
   </script>
 
-  <script type="module" src="/public/script/bg-suzanne.js"></script>
+  <script type="module" src="/public/bg/suzanne.js"></script>
 </html>
