--- a/service/fancypenosi/web/public/bg/forest/page.html
+++ b/service/fancypenosi/web/public/bg/forest/page.html
@@ -41,5 +41,5 @@
     }
   </script>
 
-  <script type="module" src="/public/bg/forest.js"></script>
+  <script type="module" src="/public/bg/forest/render.js"></script>
 </html>
