--- a/service/cornpop/web/bg/city/page.html
+++ b/service/cornpop/web/bg/city/page.html
@@ -41,5 +41,5 @@
     }
   </script>
 
-  <script type="module" src="/public/bg/forest/render.js"></script>
+  <script type="module" src="/bg/city/render.js"></script>
 </html>
